cabal-version:      3.0
name:               pqueue-bootstrapped
version:            0.1.0.0
-- synopsis:
-- description:
license:            BSD-2-Clause
license-file:       LICENSE
author:             David Feuer
maintainer:         David.Feuer@gmail.com
-- copyright:
category:           Data
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  Prio
                    , Prio2
                    , Bootstrapped
                    , Bootstrapped2
                    , Loop
                    , Loop2
    -- other-modules:
    default-extensions:
        BangPatterns
      , CPP
      , FlexibleInstances
      , KindSignatures
      , MultiParamTypeClasses
      , GADTs
      , MagicHash
      , PatternSynonyms
      , ScopedTypeVariables
      , TypeFamilies
      , UnboxedTuples
      , ViewPatterns
    -- other-extensions:

    -- We currently need -fspec-constr to get GHC to compile conversions
    -- from lists well. We could (and perhaps should) write those a bit
    -- differently so we won't need it. Regardless, it'll be necessary
    -- for list fusion—which doesn't work at the moment.
    ghc-options:      -fspec-constr
    build-depends:
        base ^>=4.17.0.0
      , indexed-traversable >= 0.1 && < 0.2
    hs-source-dirs:   src
    default-language: Haskell2010

test-suite pqueue-bootstrapped-test
    import:           warnings
    default-language: Haskell2010
    -- other-modules:
    -- other-extensions:
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
        base ^>=4.17.0.0,
        pqueue-bootstrapped

benchmark pqueue-bootstrapped-bench
    import:           warnings
    default-language: Haskell2010
    -- other-modules:
    -- other-extensions:
    type:             exitcode-stdio-1.0
    hs-source-dirs:   benchmarks
    main-is:          Main.hs
    build-depends:
        base ^>=4.17.0.0,
        pqueue-bootstrapped
